tests/errors/invalid_struct_key.re
struct a {

}
fn main() {
    let x = a {x: 1};
}